--- a/index.html
+++ b/index.html
@@ -79,6 +79,16 @@
             margin-top: 10px;
         }
 
+        .status-won {
+            color: green;
+            font-weight: bold;
+        }
+
+        .status-lost {
+            color: red;
+            font-weight: bold;
+        }
+
         footer {
             background-color: #4CAF50;
             color: white;
@@ -107,6 +117,7 @@
                 <th>Prediction</th>
                 <th>Odds</th>
                 <th>Kick-off Time</th>
+                <th>Status</th>
             </tr>
             <tr>
                 <td>Team A vs Team B</td>
@@ -114,6 +125,7 @@
                 <td>Home Win</td>
                 <td>2.5</td>
                 <td class="kickoff-time">February 4, 2025 - 15:00</td>
+                <td class="status-won">Won</td>
             </tr>
             <tr>
                 <td>Team C vs Team D</td>
@@ -121,6 +133,7 @@
                 <td>Away Win</td>
                 <td>3.0</td>
                 <td class="kickoff-time">February 4, 2025 - 17:00</td>
+                <td class="status-lost">Lost</td>
             </tr>
         </table>
         <div class="total-odds">Total Odds: 7.5</div>
@@ -135,6 +148,7 @@
                 <th>Prediction</th>
                 <th>Odds</th>
                 <th>Kick-off Time</th>
+                <th>Status</th>
             </tr>
             <tr>
                 <td>Team E vs Team F</td>
@@ -142,6 +156,7 @@
                 <td>Draw</td>
                 <td>2.8</td>
                 <td class="kickoff-time">February 5, 2025 - 14:00</td>
+                <td class="status-won">Won</td>
             </tr>
             <tr>
                 <td>Team G vs Team H</td>
@@ -149,6 +164,7 @@
                 <td>Under 2.5 Goals</td>
                 <td>2.2</td>
                 <td class="kickoff-time">February 5, 2025 - 19:30</td>
+                <td class="status-lost">Lost</td>
             </tr>
         </table>
         <div class="total-odds">Total Odds: 6.16</div>
